[gd_scene load_steps=5 format=3 uid="uid://camnjaj6mgjso"]

[ext_resource type="Script" uid="uid://452urc1kk4vi" path="res://ui/energy_gauge.gd" id="1_m7joo"]
[ext_resource type="Texture2D" uid="uid://bcrkr72bsyjel" path="res://ui/gauge2.png" id="2_ne157"]
[ext_resource type="FontFile" uid="uid://cj7nrhbig5nw7" path="res://ui/digital-7 (mono).ttf" id="5_ak2vr"]
[ext_resource type="Texture2D" uid="uid://l2eebwwj4l5x" path="res://ui/gauge1.png" id="6_anabn"]

[node name="Energy_gauge" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 240.0
script = ExtResource("1_m7joo")

[node name="gauge_colors" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 17.0
offset_right = 221.0
offset_bottom = 217.0
texture = ExtResource("2_ne157")
expand_mode = 1
stretch_mode = 4

[node name="mask" type="Polygon2D" parent="gauge_colors"]
position = Vector2(100, 100)
color = Color(0.19607843, 0.19607843, 0.19607843, 1)
polygon = PackedVector2Array(0, 0, 20, -90, 90, -20, 70, 60)

[node name="gauge_frame" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 207.0
texture = ExtResource("6_anabn")
expand_mode = 1
stretch_mode = 4

[node name="labels_container" type="Control" parent="."]
anchors_preset = 0
offset_left = 70.0
offset_top = 67.0
offset_right = 170.0
offset_bottom = 167.0

[node name="energy_lbl" type="Label" parent="labels_container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -45.0
offset_right = 64.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "UI_ENERGY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pj_lbl" type="Label" parent="labels_container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.44
anchor_right = 0.5
anchor_bottom = 0.44
offset_left = -34.5
offset_top = -11.5
offset_right = 34.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15
text = "UI_PJ"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="value_lbl" type="Label" parent="labels_container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = 6.5
offset_right = 30.5
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_ak2vr")
theme_override_font_sizes/font_size = 45
text = "xx"
horizontal_alignment = 1
vertical_alignment = 1
